[package]
name = "subway-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A Highly Optimized Sandwich Bot Built with Pure Rust and Huff"
authors = ["asnared <https://github.com/abigger87>"]
repository = "https://github.com/abigger87/subway-rs"
keywords = ["Rust", "Ethereum", "Arbitrage", "Sandwich"]

[dependencies]
# Errros
eyre = { version = "0.6" }
thiserror = "1.0.31"

# Core
tokio = { version = "1.0.1", features = ["rt-multi-thread", "macros"] }
ethers = { version = "0.17.0", features = [ "abigen", "ws", "rustls" ] }
ethers-flashbots = "0.10.0"

# Misc
hex = "0.4.3"
bytes = "1.2.1"
rlp = { version = "0.5.1", default-features = false }
rand = "0.8.5"
futures = "0.3.23"
reqwest = { version = "0.11.10", features = ["json", "blocking"] }

# Telemtry
yansi = "0.5.1"
ansi_term = "0.12.1"
tracing = "0.1.36"
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["fmt", "env-filter", "ansi"] }
chrono = "0.4.22"

# Serialization
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.82", features = [ "raw_value" ] }

[dev-dependencies]
tracing-test = "0.2.3"

[lib]
name = "subway_rs"
path = "src/lib.rs"

[[bin]]
name = "subway"
path = "src/main.rs"


