[package]
name = "carbret-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A verbose wallet inspector"
authors = ["asnared <https://github.com/abigger87>"]
repository = "https://github.com/abigger87/subway-rs"
keywords = ["Rust", "Ethereum", "Arbitrage", "Sandwich"]

[dependencies]
ansi_term = "0.12.1"
eyre = { version = "0.6" }
mev-rs = { path = "../mev-rs" }
ethers = { version = "0.17.0", features = [ "abigen", "ws", "rustls" ] }
tokio = { version = "1.0.1", features = ["rt-multi-thread", "macros"] }

[[bin]]
name = "carbret"
path = "src/main.rs"
