[package]
name = "hugo-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Hugo: An Aggressive Sandwich Bot"
authors = ["asnared <https://github.com/abigger87>"]
repository = "https://github.com/abigger87/subway-rs"
keywords = ["Rust", "Ethereum", "Arbitrage", "Sandwich"]

[dependencies]
eyre = { version = "0.6" }
tui = { version = "0.19.0", features = [ "termion" ] }
clap = { version = "4.0", features = ["derive", "env", "wrap_help"] }
tokio = { version = "1.0.1", features = ["rt-multi-thread", "macros"] }
ethers = { version = "0.17.0", features = [ "abigen", "ws", "rustls" ] }

# Misc
rand = "0.8.5"
futures = "0.3.23"
reqwest = { version = "0.11.10", features = ["json", "blocking"] }

# Telemtry
yansi = "0.5.1"
ansi_term = "0.12.1"
tracing = "0.1.36"
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["fmt", "env-filter", "ansi"] }
chrono = "0.4.22"
termion = "1.5.6"

[[bin]]
name = "hugo"
path = "src/main.rs"
features = [ "crossterm" ]
