[package]
name = "mev-rs"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Modern and maximally-minimal rust tooling for MEV"
authors = ["asnared <https://github.com/abigger87>"]
repository = "https://github.com/abigger87/subway-rs"
keywords = ["Rust", "Ethereum", "Arbitrage", "Sandwich"]

[dependencies]
ethers = { version = "0.17.0", features = [ "abigen", "ws", "rustls" ] }
ethers-flashbots = "0.10.0"

# Serialization
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.82", features = [ "raw_value" ] }

# Runtime
tokio = { version = "1.0.1", features = ["rt-multi-thread", "macros"] }

# Error Handling
eyre = { version = "0.6" }
thiserror = "1.0.31"

# Misc
hex = "0.4.3"
rand = "0.8.5"
bytes = "1.2.1"
futures = "0.3.23"
reqwest = { version = "0.11.10", features = ["json", "blocking"] }
rlp = { version = "0.5.1", default-features = false }

# Telemtry
yansi = "0.5.1"
ansi_term = "0.12.1"
tracing = "0.1.36"
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["fmt", "env-filter", "ansi"] }
chrono = "0.4.22"

[dev-dependencies]
tracing-test = "0.2.3"
